[package]
name = "project-ma-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.4"
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "integrated-timers", "task-arena-size-32768"] }
embassy-rp = { version = "0.1.0", features = ["time-driver", "critical-section-impl"] }
embassy-time = "0.3.0"
embassy-usb-logger = "0.1.0"
log = "0.4.21"
panic-probe = "0.3.2"